--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npm run assets && webpack serve --config ./webpack.config.js --mode development",
     "build": "npm run assets && webpack build --config ./webpack.config.js --mode production",
-    "assets": "mkdir dist && cp src/index.html dist/index.html",
+    "assets": "rm -rf dist && mkdir dist && cp src/index.html dist/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
