--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.9",
+    "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0",
@@ -37,7 +38,8 @@
           "corejs": 3,
           "targets": "> 0.25%, not dead"
         }
-      ]
+      ],
+      "@babel/preset-react"
     ]
   }
 }
